--- a/components/homeMain.module.css
+++ b/components/homeMain.module.css
@@ -4,18 +4,19 @@
     left:0;
     width: 100%;
     object-fit: cover;
-    z-index: 1;
+    z-index: 0;
 }
 .intro{
     padding: 0 1rem;
     margin-left: auto;
     margin-right: auto;
-    padding-top:298px;
+    padding-top:98px;
     position: relative;
-    z-index: 2;
 }
 .intro_paragraph{
     text-align: center;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 .three_buttons_wrapper{
     margin-left: auto;
@@ -45,11 +46,13 @@
     cursor: pointer;
     border: 1px solid #78b2e8;
     padding: 12px;
-    flex-grow: 1;
-    background:#2e77bbee;
+    background:#2e77bb99;
     text-align: left;
     box-shadow: 0 1px 3px rgba(120,178,232,0.12), 0 1px 2px rgba(120,178,232,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+.eztitles_card{
+    flex:0 0 50%;
 }
 .product_card:hover{
     box-shadow: 0 14px 28px rgba(120,178,232,0.25), 0 11px 11px rgba(120,178,232,0.22);
@@ -77,24 +80,57 @@
 .home_post_main_wrapper{
     margin-top: 80px;
     position: relative;
-    z-index: 2;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
+    padding:0 150px;
     background:#12263a;
 }
 .home_post_main_content{
-    flex: 0 0 50%;
+    flex: 0 0 32%;
     padding:20px;
     margin-bottom: 2%;
+    transition: 0.3s;
+    cursor: pointer;
+    border:1px solid #ffffff00;
+
 }
+.home_post_main_content:hover .home_post_main_content_icon_image > div{
+    background:#ffffff;
+
+}
+.home_post_main_content:hover .home_post_main_content_icon_image > div img{
+    filter: invert(0.8);
+
+}
+.home_post_main_content:hover .home_post_main_content_icon_image{
+    flex: 0 0 29%;
+    background: #ffffff;
+
+}
+.home_post_main_content:hover .line{
+    flex: 0 0 32%;
+    background: #ffffff;
+
+}
+.home_post_main_content:hover a{
+    text-decoration: underline;
+    color: #85bdf1;
+
+}
+.home_post_main_content:hover .home_post_main_content_inner{
+    border:1px solid #ffffff88;
+
+}
+
 .home_post_main_content_inner{
     display: flex;
     flex-direction: row;
     width: 100%;
     height:100%;
     position: relative;
+    border:1px solid #ffffff00;
 
 }
 .home_post_main_content_icon{
@@ -107,22 +143,39 @@
 
 }
 .home_post_main_content_text{
+    padding:0 12px;
     flex:0 0 88%;
 
 }
 .home_post_main_content_icon_image{
-    flex: 0 0 32%;
+    flex: 0 0 59%;
     margin: 0 auto;
     position: relative;
+    transition: 0.3s;
+}
+.home_post_main_content_icon_image_inner{
+    border-radius: 9999px;
+    position: relative;
+    height: 50px;
+    width: max-content;
+    transition: 0.5s;
+
+}
+.home_post_main_content_icon_image_inner img{
+    transition: 0.5s;
 }
 .home_post_main_content_icon_image > div{
     position:absolute;
     top:50%;
-    transform: translateY(-50%);
+    transform: translateY(-50%) translateX(-50%);
  }
 .line{
-    flex: 0 0 32%;
+    flex: 0 0 16%;
     width:1px;
     background: #ffffff88;
     margin: 0 auto;
+    transition: 0.3s;
+}
+.custom_link{
+    color:#78b2e8;
 }
