--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -46,7 +46,15 @@
     margin: auto;
     width: fit-content;
     border-radius: 999px;
-
+    transition: all 0.6s cubic-bezier(.25,.8,.25,1);
+}
+.nav_icon_wrapper_home{
+    padding-top:49px;
+    margin: auto;
+    width: fit-content;
+    border-radius: 999px;
+    transform: scale(3);
+    transition: all 0.6s cubic-bezier(.25,.8,.25,1);
 }
 .nav_search_svg{
     margin-right: 28px;
