--- a/styles/global.css
+++ b/styles/global.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,300&display=swap');
 html,
 body{
     padding:0;
     margin:0;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    /*font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;*/
+    font-family: 'Montserrat', sans-serif;
     line-height: 1.6;
     font-size: 18px;
+    background:#12263a;
 }
 
 *{
@@ -26,7 +29,7 @@ img {
     object-fit: contain;
 }
 
-p, h2, h3, h4, h5{
+p, h1, h2, h3, h4, h5{
     color:#ffffff;
 }
 
