--- a/components/homeMain.module.css
+++ b/components/homeMain.module.css
@@ -11,9 +11,25 @@
     flex-direction: row;
     flex-wrap: wrap;
 }
-.products{
- flex: 0 0 58%;
+.products_outer{
+    position: relative;
+    flex: 0 0 58%;
+
+
 }
+.products{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 120px;
+    height:100%;
+    max-width: 365px;
+    position: relative;
+    transform-style: preserve-3d;
+    perspective: 1000px;
+
+
+}
+
 .intro{
     flex: 0 0 41%;
     padding: 0 1rem;
@@ -62,68 +78,51 @@
 
 }
 .eztitles_card{
-    position: absolute;
-    top:25%;
-    left:50%;
-    transform: translateX(50%);
     background:#2e77bb;
-    max-width: 365px;
-    height: 567px;
-    overflow:hidden;
-    border-radius: 6px;
     border:3px solid #ffffff88;
-    z-index: 8;
     box-shadow: 0 11px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 
 
 }
 .ezconvert_card{
-    position: absolute;
-    top:25%;
-    left:50%;
-    transform: translateX(75%) translateY(2%) scale(0.94);
-    max-width: 365px;
-    height: 567px;
-    overflow:hidden;
-    border-radius: 6px;
+
     background:#a30015;
     border:3px solid #ffffff88;
-    z-index: 7;
+
     box-shadow: 0 11px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 
 
 }
 .titles3d_card{
-    position: absolute;
-    top:25%;
-    left:50%;
-    transform: translateX(25%) translateY(2%) scale(0.94);
-    max-width: 365px;
-    height: 567px;
-    overflow:hidden;
-    border-radius: 6px;
+
+
+
     background:#3b8a21;
     border:3px solid #ffffff88;
-    z-index: 7;
     box-shadow: 0 11px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 
 
 }
 .plugin_card{
-    position: absolute;
-    top:25%;
-    left:50%;
-    transform: translateX(6%) translateY(2%) scale(0.89);
-    max-width: 365px;
-    height: 567px;
-    overflow:hidden;
+
+
     border-radius: 6px;
     background:#cf420a;
     border:3px solid #ffffff88;
-    z-index: 6;
     box-shadow: 0 11px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 
 
+}
+.products label{
+
+
+    height: 567px;
+    overflow:hidden;
+    border-radius: 6px;
+    position: absolute;
+    left: 0; right: 0;
+    cursor: pointer;
+    transition: transform 0.3s ease;
 }
 .card_title{
     padding-left: 8px;
@@ -217,6 +216,28 @@
 .Z{
     left:31%;
     top:-26%;
+}
+.radio{
+    transform: scale(1.3);
+    position:absolute;
+    bottom:0;
+    z-index:999;
+}
+.r1{
+    left:35%;
+
+}
+.r2{
+    left:43%;
+
+}
+.r3{
+    left:51%;
+
+}
+.r4{
+    left:59%;
+
 }
 
 
@@ -342,47 +363,8 @@
     cursor: pointer;
 }
 
-.container {
-    width: 100%;
-    max-width: 800px;
-    max-height: 600px;
-    height: 100%;
-    transform-style: preserve-3d;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
-
-.cards {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    margin-bottom: 20px;
-}
 
 
-#item-1:checked ~ .cards #song-3,
-#item-2:checked ~ .cards #song-1,
-#item-3:checked ~ .cards #song-2 {
-    transform: translatex(-40%) scale(0.8);
-    opacity: 0.8;
-    z-index: 0;
-}
 
-#item-1:checked ~ .cards #song-2,
-#item-2:checked ~ .cards #song-3,
-#item-3:checked ~ .cards #song-1 {
-    transform: translatex(40%) scale(0.8);
-    opacity: 0.8;
-    z-index: 0;
-}
 
-#item-1:checked ~ .cards #song-1,
-#item-2:checked ~ .cards #song-2,
-#item-3:checked ~ .cards #song-3 {
-    transform: translatex(0) scale(1);
-    opacity: 1;
-    z-index: 1;
 
-}
