--- a/styles/global.css
+++ b/styles/global.css
@@ -42,7 +42,41 @@ p, h1, h2, h3, h4, h5{
 
 }
 
-input[type="radio"] {
-    display: none;
+
+
+#item-1:checked ~ #slide4, #item-2:checked ~ #slide5,
+#item-3:checked ~ #slide1, #item-4:checked ~ #slide2,
+#item-5:checked ~ #slide3 {
+    box-shadow: 0 1px 4px 0 rgba(0,0,0,.37);
+    transform: translate3d(-60%,0,-200px);
 }
+
+#item-1:checked ~ #slide5, #item-2:checked ~ #slide1,
+#item-3:checked ~ #slide2, #item-4:checked ~ #slide3,
+#item-5:checked ~ #slide4 {
+    box-shadow: 0 6px 10px 0 rgba(0,0,0,.3), 0 2px 2px 0 rgba(0,0,0,.2);
+    transform: translate3d(-33%,0,-100px);
+}
+
+#item-1:checked ~ #slide1, #item-2:checked ~ #slide2,
+#item-3:checked ~ #slide3, #item-4:checked ~ #slide4,
+#item-5:checked ~ #slide5 {
+    box-shadow: 0 13px 25px 0 rgba(0,0,0,.3), 0 11px 7px 0 rgba(0,0,0,.19);
+    transform: translate3d(0,0,0);
+}
+
+#item-1:checked ~ #slide2, #item-2:checked ~ #slide3,
+#item-3:checked ~ #slide4, #item-4:checked ~ #slide5,
+#item-5:checked ~ #slide1 {
+    box-shadow: 0 6px 10px 0 rgba(0,0,0,.3), 0 2px 2px 0 rgba(0,0,0,.2);
+    transform: translate3d(33%,0,-100px);
+}
+
+#item-1:checked ~ #slide3, #item-2:checked ~ #slide4,
+#item-3:checked ~ #slide5, #item-4:checked ~ #slide1,
+#item-5:checked ~ #slide2 {
+    box-shadow: 0 1px 4px 0 rgba(0,0,0,.37);
+    transform: translate3d(60%,0,-200px);
+}
+
 
