--- a/components/footer.module.css
+++ b/components/footer.module.css
@@ -1,7 +1,40 @@
 .footer_main{
+    background: url(/images/footer-bg3.svg) no-repeat center bottom;
+    color: #fff;
+    padding: 200px 11px 90px;
+    font-size: 0.938em;
     position: relative;
-    width: 100%;
-    height: 400px;
-    background:#191919;
-    z-index: 2;
+    z-index: 3;
+    overflow: hidden;
+
+    background-size:contain;
+}
+.container{
+    position: relative;
+    margin: 0 auto !important;
+    padding: 0 !important;
+    height: 100%;
+    overflow: hidden;
+    text-align: center;
+}
+.container ul{
+    list-style: none;
+}
+.row{
+    width:100%;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+    margin: 0 auto;
+}
+.row_inner{
+    display: flex;
+    width: auto;
+    margin: 0 auto;
+}
+.footer_links{
+    list-style: none;
 }
