--- a/components/footer.module.css
+++ b/components/footer.module.css
@@ -15,12 +15,33 @@
     padding: 0 !important;
     height: 100%;
     overflow: hidden;
-    text-align: center;
+    width:100%;
 }
 .container ul{
+    margin-top: 0;
+    margin-bottom: 1rem;
     list-style: none;
 }
-.row{
+.container ul li{
+    list-style: none;
+    margin-bottom: 5px;
+    text-align: left;
+}
+.container ul li::marker{
+    text-transform: none;
+    unicode-bidi: isolate;
+    font-variant-numeric: tabular-nums;
+    white-space: pre;
+}
+.container ul li a{
+    color: rgba(255,255,255,0.8);
+    font-size: 1.125em;
+}
+.container ul li a:hover{
+    color: #ffffff;
+    font-size: 1.125em;
+}
+.row_wrapper{
     width:100%;
     display: -ms-flexbox;
     display: flex;
@@ -31,10 +52,40 @@
     margin: 0 auto;
 }
 .row_inner{
+    width: 80%;
     display: flex;
-    width: auto;
     margin: 0 auto;
+    flex-direction: row;
+
 }
 .footer_links{
     list-style: none;
+}
+.col_1{
+    justify-content: left;
+    position: relative;
+    padding-right: 15px;
+    padding-left: 15px;
+    -ms-flex: 0 0 25%;
+    flex: 0 0 25%;
+}
+.social_media{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: translateX(-25%);
+}
+.social_media ul li{
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 11px;
+}
+.footer_links{
+    padding-left: 0;
+}
+.footer_bottom{
+    padding-top:60px;
+}
+.footer_bottom_inner{
+    text-align: center;
 }
