--- a/styles/global.css
+++ b/styles/global.css
@@ -7,6 +7,7 @@ body{
     font-family: 'Montserrat', sans-serif;
     line-height: 1.6;
     font-size: 18px;
+    font-weight: 100;
     background:#12263a;
 }
 
