--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -57,7 +57,9 @@
     transition: all 0.6s cubic-bezier(.25,.8,.25,1);
 }
 .nav_search_svg{
-    margin-right: 28px;
+    margin-right: 6px;
+}.nav_cart_svg{
+
 }
 
 
@@ -111,4 +113,36 @@
     height: 40px;
     border-radius: 50%;
 }
-
+.cart_wrapper{
+    cursor: pointer;
+    transition: 0.3s;
+    position: relative;
+}
+.cart_wrapper svg{
+    transition: 0.3s;
+}
+.cart_wrapper:hover svg{
+    transform: scale(1.3);
+    fill:#35C9F2;
+}
+.cart_items{
+    position:absolute;
+    bottom:0;
+    left:0;
+    width:19px;
+    height:19px;
+    background:#c7441f;
+    border-radius: 25px;
+    z-index: 2;
+}
+.cart_items_inner{
+    position:relative;
+    width:100%;
+    height:100%;
+}
+.cart_items_inner_number{
+    position:absolute;
+    bottom:50%;
+    left:50%;
+    transform: translate(-50%, 50%);
+}
