--- a/styles/buy.module.css
+++ b/styles/buy.module.css
@@ -75,6 +75,7 @@
     background-color: #F5F5F5;
     display: flex;
     width:100%;
+    height: 800px;
     /*margin: 0 400px;*/
     border-top:2px solid #35C9F2;
     border-top:3px solid #2e77bb;
