--- a/styles/checkout.module.css
+++ b/styles/checkout.module.css
@@ -16,6 +16,7 @@
     cursor: pointer;
 }
 .submit_button{
+    margin-left: 2%;
 
 }
 .wrapper{
@@ -26,8 +27,10 @@
     /*margin: 0 400px;*/
     border-top:2px solid #35C9F2;
     border-top:3px solid #2e77bb;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-direction: column;
+    height:800px;
+
 
 
 }
@@ -53,12 +56,14 @@
 .client_info{
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
 
 
 }
 .payment{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 
 
 }
@@ -68,6 +73,7 @@
 
 /* setup user page css */
 .form_wrapper{
+
 
 }
 .form{
