--- a/styles/subtitle.module.css
+++ b/styles/subtitle.module.css
@@ -163,7 +163,18 @@ background: #ffffff;
     justify-content: space-between;
 }
 .dc_side{}
+.dc_inner_main{
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    margin-bottom: 2%; /* (100-32*3)/2 */
+    background:#2e77bb;
+    border-radius: 8px;
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+
+}
 .dc_inner{
+    cursor:pointer;
     position: relative;
     overflow: hidden;
     width: 32%;
@@ -175,6 +186,7 @@ background: #ffffff;
 }
 .dc_inner:hover{
     background: #78b2e8;
+    opacity:1 !important;
 }
 .dc_inner:hover img{
     filter: invert(1);
@@ -202,6 +214,19 @@ background: #ffffff;
 }
 .dc_background img{
     transform: scale(2);
+    filter: brightness(100);
+}
+.dc_background_main{
+    position: absolute;
+    left:20px;
+    top:-20px;
+    opacity: 0.11;
+}
+.dc_background_main > div{
+    overflow: unset !important;
+}
+.dc_background_main img{
+    transform: scale(3.5);
     filter: brightness(100);
 }
 .dc_left{
@@ -235,6 +260,29 @@ background: #ffffff;
     position: relative;
 
 }
+.boxes_info_main{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+
+}
+.elem_main{
+    justify-content: left;
+    display: flex;
+    flex-direction: row;
+    padding-left:2%;
+    padding-top:2%;
+}
+.elem_main_inner{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.elem_main_inner_section{
+    flex:0 0 48%;
+    margin-left:2%;
+
+}
 .center_elem{
     position: absolute;
     display: flex;
@@ -251,6 +299,14 @@ background: #ffffff;
     margin:0;
     font-size: 1.3em;
     margin-left: 2%;
+}
+.center_elem_text_main{
+    flex: 0 0 80%;
+    margin:0;
+    margin-left: 2%;
+}
+.center_elem_text_main h3{
+    margin:0;
 }
 
 
